fix: add native access to manifest and module-info